@@ -9,13 +9,13 @@ document_manager_pixmaps_DATA = \
         anjuta-fold-open-16.png \
         anjuta-fold-open-24.png \
         anjuta-fold-close-16.png \
-        anjuta-fold-close-24.png \        
+        anjuta-fold-close-24.png \
         anjuta-indent-less-16.png \
         anjuta-indent-less-24.png \
         anjuta-indent-more-16.png \
         anjuta-indent-more-24.png \
         anjuta-block-select-16.png \
-        anjuta-block-select-24.png \       
+        anjuta-block-select-24.png \
         anjuta-block-end-16.png \
         anjuta-block-end-24.png \
         anjuta-block-start-16.png \
